# concurrent-and-parallel-code

concurrent-stack/: a.out  concurrent_stack.h  main.cpp
parallel-matrix-multiply/: CMakeLists.txt  main.cpp
parallel-matrix-multiply/.cache/clangd/index/: main.cpp.2384AAE19C69FC97.idx  main.cpp.31307A572A6FA828.idx
spinlocks/: CMakeLists.txt  Doxyfile.in
spinlocks/src/: CMakeLists.txt
spinlocks/src/app1/: main.cpp
spinlocks/src/locally-spinning/: CMakeLists.txt
spinlocks/src/locally-spinning/include/locally-spinning/: locally-spinning.h
spinlocks/src/naive-spinlock/: CMakeLists.txt
spinlocks/src/naive-spinlock/include/naive-spinlock/: naive-spinlock.h
spinlocks/tests/: CMakeLists.txt  tests-locally-spinning.cpp  tests-naive-spinlock.cpp
tank-fueler-producer-consumer/: a.out  main.cpp
